// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`identity.sql > line 2 1`] = `
[
  "SELECT attrelid, attname, attidentity FROM pg_attribute WHERE attidentity NOT IN ('', 'a', 'd')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 43,
                  "relname": "pg_attribute",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "attrelid",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 17,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "attname",
                          },
                        },
                      ],
                      "location": 17,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 26,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "attidentity",
                          },
                        },
                      ],
                      "location": 26,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_IN",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "attidentity",
                        },
                      },
                    ],
                    "location": 62,
                  },
                },
                "location": 74,
                "name": [
                  {
                    "String": {
                      "sval": "<>",
                    },
                  },
                ],
                "rexpr": {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 82,
                          "sval": {
                            "sval": "",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 86,
                          "sval": {
                            "sval": "a",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 91,
                          "sval": {
                            "sval": "d",
                          },
                        },
                      },
                    ],
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 8 1`] = `
[
  "  -- error

SELECT table_name, column_name, column_default, is_nullable, is_identity, identity_generation, identity_start, identity_increment, identity_maximum, identity_minimum, identity_cycle FROM information_schema.columns WHERE table_name LIKE 'itest_' ORDER BY 1, 2",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 199,
                  "relname": "columns",
                  "relpersistence": "p",
                  "schemaname": "information_schema",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 266,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Const": {
                      "ival": {
                        "ival": 2,
                      },
                      "location": 269,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 19,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "table_name",
                          },
                        },
                      ],
                      "location": 19,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 31,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "column_name",
                          },
                        },
                      ],
                      "location": 31,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 44,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "column_default",
                          },
                        },
                      ],
                      "location": 44,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 60,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "is_nullable",
                          },
                        },
                      ],
                      "location": 60,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 73,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "is_identity",
                          },
                        },
                      ],
                      "location": 73,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 86,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "identity_generation",
                          },
                        },
                      ],
                      "location": 86,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 107,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "identity_start",
                          },
                        },
                      ],
                      "location": 107,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 123,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "identity_increment",
                          },
                        },
                      ],
                      "location": 123,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 143,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "identity_maximum",
                          },
                        },
                      ],
                      "location": 143,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 161,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "identity_minimum",
                          },
                        },
                      ],
                      "location": 161,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 179,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "identity_cycle",
                          },
                        },
                      ],
                      "location": 179,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_LIKE",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "table_name",
                        },
                      },
                    ],
                    "location": 232,
                  },
                },
                "location": 243,
                "name": [
                  {
                    "String": {
                      "sval": "~~",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 248,
                    "sval": {
                      "sval": "itest_",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 13 1`] = `
[
  "SELECT sequence_name FROM information_schema.sequences WHERE sequence_name LIKE 'itest%'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 26,
                  "relname": "sequences",
                  "relpersistence": "p",
                  "schemaname": "information_schema",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "sequence_name",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_LIKE",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "sequence_name",
                        },
                      },
                    ],
                    "location": 61,
                  },
                },
                "location": 75,
                "name": [
                  {
                    "String": {
                      "sval": "~~",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 80,
                    "sval": {
                      "sval": "itest%",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 15 1`] = `
[
  "SELECT pg_get_serial_sequence('itest1', 'a')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 30,
                            "sval": {
                              "sval": "itest1",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 40,
                            "sval": {
                              "sval": "a",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_get_serial_sequence",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 20 1`] = `
[
  "  -- error, requires NOT NULL
ALTER TABLE itest4 ALTER COLUMN a SET NOT NULL",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "name": "a",
                  "subtype": "AT_SetNotNull",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 42,
              "relname": "itest4",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 22 1`] = `
[
  "  -- ok
ALTER TABLE itest4 ALTER COLUMN a DROP NOT NULL",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "name": "a",
                  "subtype": "AT_DropNotNull",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 20,
              "relname": "itest4",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 23 1`] = `
[
  "  -- error, disallowed
ALTER TABLE itest4 ALTER COLUMN a ADD GENERATED ALWAYS AS IDENTITY",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "Constraint": {
                      "contype": "CONSTR_IDENTITY",
                      "generated_when": "a",
                      "location": 61,
                    },
                  },
                  "name": "a",
                  "subtype": "AT_AddIdentity",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 35,
              "relname": "itest4",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 24 1`] = `
[
  "  -- error, already set
ALTER TABLE itest4 ALTER COLUMN b ADD GENERATED ALWAYS AS IDENTITY",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "Constraint": {
                      "contype": "CONSTR_IDENTITY",
                      "generated_when": "a",
                      "location": 62,
                    },
                  },
                  "name": "b",
                  "subtype": "AT_AddIdentity",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 36,
              "relname": "itest4",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 25 1`] = `
[
  "  -- error, wrong data type

-- for later
ALTER TABLE itest4 ALTER COLUMN b SET DEFAULT ''",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "A_Const": {
                      "location": 88,
                      "sval": {
                        "sval": "",
                      },
                    },
                  },
                  "name": "b",
                  "subtype": "AT_ColumnDefault",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 54,
              "relname": "itest4",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 31 1`] = `
[
  "CREATE TABLE itest_err_1 (a text generated by default as identity)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "itest_err_1",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_IDENTITY",
                        "generated_when": "d",
                        "location": 33,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 26,
                  "typeName": {
                    "location": 28,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 34 1`] = `
[
  "CREATE TABLE itest_err_2 (a int generated always as identity generated by default as identity)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "itest_err_2",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_IDENTITY",
                        "generated_when": "a",
                        "location": 32,
                      },
                    },
                    {
                      "Constraint": {
                        "contype": "CONSTR_IDENTITY",
                        "generated_when": "d",
                        "location": 61,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 26,
                  "typeName": {
                    "location": 28,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 37 1`] = `
[
  "CREATE TABLE itest_err_3 (a int default 5 generated by default as identity)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "itest_err_3",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_DEFAULT",
                        "location": 32,
                        "raw_expr": {
                          "A_Const": {
                            "ival": {
                              "ival": 5,
                            },
                            "location": 40,
                          },
                        },
                      },
                    },
                    {
                      "Constraint": {
                        "contype": "CONSTR_IDENTITY",
                        "generated_when": "d",
                        "location": 42,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 26,
                  "typeName": {
                    "location": 28,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 40 1`] = `
[
  "CREATE TABLE itest_err_4 (a serial generated by default as identity)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "itest_err_4",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_IDENTITY",
                        "generated_when": "d",
                        "location": 35,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 26,
                  "typeName": {
                    "location": 28,
                    "names": [
                      {
                        "String": {
                          "sval": "serial",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 42 1`] = `
[
  "INSERT INTO itest1 DEFAULT VALUES",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "itest1",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 51 1`] = `
[
  "SELECT * FROM itest1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "itest1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 60 1`] = `
[
  "  -- error
INSERT INTO itest5 VALUES (DEFAULT, 'a')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 23,
              "relname": "itest5",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "SetToDefault": {
                            "location": 38,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 47,
                            "sval": {
                              "sval": "a",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 65 1`] = `
[
  "  -- ok

INSERT INTO itest5 OVERRIDING SYSTEM VALUE VALUES (-1, 'aa')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_SYSTEM_VALUE",
            "relation": {
              "inh": true,
              "location": 21,
              "relname": "itest5",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {},
                            "location": 60,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 64,
                            "sval": {
                              "sval": "aa",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 73 1`] = `
[
  "INSERT INTO itest5 OVERRIDING USER VALUE VALUES (-1, 'aaa')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_USER_VALUE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "itest5",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {},
                            "location": 49,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 53,
                            "sval": {
                              "sval": "aaa",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 79 1`] = `
[
  "SELECT * FROM itest5",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "itest5",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 82 1`] = `
[
  "INSERT INTO itest3 VALUES (DEFAULT, 'a')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "itest3",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "SetToDefault": {
                            "location": 27,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 36,
                            "sval": {
                              "sval": "a",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 85 1`] = `
[
  "SELECT * FROM itest3",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "itest3",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 93 1`] = `
[
  "INSERT INTO itest1 VALUES (10, 'xyz')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "itest1",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 10,
                            },
                            "location": 27,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 31,
                            "sval": {
                              "sval": "xyz",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 98 1`] = `
[
  "INSERT INTO itest1 OVERRIDING SYSTEM VALUE VALUES (20, 'xyz')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_SYSTEM_VALUE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "itest1",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 20,
                            },
                            "location": 51,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 55,
                            "sval": {
                              "sval": "xyz",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 100 1`] = `
[
  "INSERT INTO itest1 OVERRIDING USER VALUE VALUES (30, 'xyz')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_USER_VALUE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "itest1",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 30,
                            },
                            "location": 49,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 53,
                            "sval": {
                              "sval": "xyz",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 107 1`] = `
[
  "INSERT INTO itest2 VALUES (10, 'xyz')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "itest2",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 10,
                            },
                            "location": 27,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 31,
                            "sval": {
                              "sval": "xyz",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 109 1`] = `
[
  "INSERT INTO itest2 OVERRIDING SYSTEM VALUE VALUES (20, 'xyz')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_SYSTEM_VALUE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "itest2",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 20,
                            },
                            "location": 51,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 55,
                            "sval": {
                              "sval": "xyz",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 111 1`] = `
[
  "INSERT INTO itest2 OVERRIDING USER VALUE VALUES (30, 'xyz')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_USER_VALUE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "itest2",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 30,
                            },
                            "location": 49,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 53,
                            "sval": {
                              "sval": "xyz",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 113 1`] = `
[
  "SELECT * FROM itest2",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "itest2",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 119 1`] = `
[
  "UPDATE itest1 SET a = 101 WHERE a = 1",
  {
    "stmts": [
      {
        "stmt": {
          "UpdateStmt": {
            "relation": {
              "inh": true,
              "location": 7,
              "relname": "itest1",
              "relpersistence": "p",
            },
            "targetList": [
              {
                "ResTarget": {
                  "location": 18,
                  "name": "a",
                  "val": {
                    "A_Const": {
                      "ival": {
                        "ival": 101,
                      },
                      "location": 22,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "a",
                        },
                      },
                    ],
                    "location": 32,
                  },
                },
                "location": 34,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 36,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 124 1`] = `
[
  "UPDATE itest2 SET a = 101 WHERE a = 1",
  {
    "stmts": [
      {
        "stmt": {
          "UpdateStmt": {
            "relation": {
              "inh": true,
              "location": 7,
              "relname": "itest2",
              "relpersistence": "p",
            },
            "targetList": [
              {
                "ResTarget": {
                  "location": 18,
                  "name": "a",
                  "val": {
                    "A_Const": {
                      "ival": {
                        "ival": 101,
                      },
                      "location": 22,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "a",
                        },
                      },
                    ],
                    "location": 32,
                  },
                },
                "location": 34,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 36,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 133 1`] = `
[
  "COPY itest9 FROM STDIN",
  {
    "stmts": [
      {
        "stmt": {
          "CopyStmt": {
            "is_from": true,
            "relation": {
              "inh": true,
              "location": 5,
              "relname": "itest9",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 140 1`] = `
[
  " -- error
DROP TYPE itest_type CASCADE",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_CASCADE",
            "objects": [
              {
                "TypeName": {
                  "location": 20,
                  "names": [
                    {
                      "String": {
                        "sval": "itest_type",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            ],
            "removeType": "OBJECT_TYPE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 149 1`] = `
[
  " -- error
DROP TABLE itest_parent",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "itest_parent",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 162 1`] = `
[
  " -- fail
CREATE TABLE itest15 (id integer NULL GENERATED ALWAYS AS IDENTITY)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 22,
              "relname": "itest15",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "id",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_NULL",
                        "location": 42,
                      },
                    },
                    {
                      "Constraint": {
                        "contype": "CONSTR_IDENTITY",
                        "generated_when": "a",
                        "location": 47,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 31,
                  "typeName": {
                    "location": 34,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 163 1`] = `
[
  " -- fail
CREATE TABLE itest15 (id integer GENERATED ALWAYS AS IDENTITY NOT NULL)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 22,
              "relname": "itest15",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "id",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_IDENTITY",
                        "generated_when": "a",
                        "location": 42,
                      },
                    },
                    {
                      "Constraint": {
                        "contype": "CONSTR_NOTNULL",
                        "location": 71,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 31,
                  "typeName": {
                    "location": 34,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 170 1`] = `
[
  "CREATE TABLE itest15 (a int GENERATED ALWAYS AS IDENTITY, b text)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "itest15",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_IDENTITY",
                        "generated_when": "a",
                        "location": 28,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 22,
                  "typeName": {
                    "location": 24,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "b",
                  "is_local": true,
                  "location": 58,
                  "typeName": {
                    "location": 60,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 173 1`] = `
[
  "MERGE INTO itest15 t
USING (SELECT 10 AS s_a, 'inserted by merge' AS s_b) s
ON t.a = s.s_a
WHEN NOT MATCHED THEN
	INSERT (a, b) VALUES (s.s_a, s.s_b)",
  {
    "stmts": [
      {
        "stmt": {
          "MergeStmt": {
            "joinCondition": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "t",
                        },
                      },
                      {
                        "String": {
                          "sval": "a",
                        },
                      },
                    ],
                    "location": 79,
                  },
                },
                "location": 83,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "s",
                        },
                      },
                      {
                        "String": {
                          "sval": "s_a",
                        },
                      },
                    ],
                    "location": 85,
                  },
                },
              },
            },
            "mergeWhenClauses": [
              {
                "MergeWhenClause": {
                  "commandType": "CMD_INSERT",
                  "override": "OVERRIDING_NOT_SET",
                  "targetList": [
                    {
                      "ResTarget": {
                        "location": 122,
                        "name": "a",
                      },
                    },
                    {
                      "ResTarget": {
                        "location": 125,
                        "name": "b",
                      },
                    },
                  ],
                  "values": [
                    {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "s",
                            },
                          },
                          {
                            "String": {
                              "sval": "s_a",
                            },
                          },
                        ],
                        "location": 136,
                      },
                    },
                    {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "s",
                            },
                          },
                          {
                            "String": {
                              "sval": "s_b",
                            },
                          },
                        ],
                        "location": 143,
                      },
                    },
                  ],
                },
              },
            ],
            "relation": {
              "alias": {
                "aliasname": "t",
              },
              "inh": true,
              "location": 11,
              "relname": "itest15",
              "relpersistence": "p",
            },
            "sourceRelation": {
              "RangeSubselect": {
                "alias": {
                  "aliasname": "s",
                },
                "subquery": {
                  "SelectStmt": {
                    "limitOption": "LIMIT_OPTION_DEFAULT",
                    "op": "SETOP_NONE",
                    "targetList": [
                      {
                        "ResTarget": {
                          "location": 35,
                          "name": "s_a",
                          "val": {
                            "A_Const": {
                              "ival": {
                                "ival": 10,
                              },
                              "location": 35,
                            },
                          },
                        },
                      },
                      {
                        "ResTarget": {
                          "location": 46,
                          "name": "s_b",
                          "val": {
                            "A_Const": {
                              "location": 46,
                              "sval": {
                                "sval": "inserted by merge",
                              },
                            },
                          },
                        },
                      },
                    ],
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 180 1`] = `
[
  "MERGE INTO itest15 t
USING (SELECT 20 AS s_a, 'inserted by merge' AS s_b) s
ON t.a = s.s_a
WHEN NOT MATCHED THEN
	INSERT (a, b) OVERRIDING USER VALUE VALUES (s.s_a, s.s_b)",
  {
    "stmts": [
      {
        "stmt": {
          "MergeStmt": {
            "joinCondition": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "t",
                        },
                      },
                      {
                        "String": {
                          "sval": "a",
                        },
                      },
                    ],
                    "location": 79,
                  },
                },
                "location": 83,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "s",
                        },
                      },
                      {
                        "String": {
                          "sval": "s_a",
                        },
                      },
                    ],
                    "location": 85,
                  },
                },
              },
            },
            "mergeWhenClauses": [
              {
                "MergeWhenClause": {
                  "commandType": "CMD_INSERT",
                  "override": "OVERRIDING_USER_VALUE",
                  "targetList": [
                    {
                      "ResTarget": {
                        "location": 122,
                        "name": "a",
                      },
                    },
                    {
                      "ResTarget": {
                        "location": 125,
                        "name": "b",
                      },
                    },
                  ],
                  "values": [
                    {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "s",
                            },
                          },
                          {
                            "String": {
                              "sval": "s_a",
                            },
                          },
                        ],
                        "location": 158,
                      },
                    },
                    {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "s",
                            },
                          },
                          {
                            "String": {
                              "sval": "s_b",
                            },
                          },
                        ],
                        "location": 165,
                      },
                    },
                  ],
                },
              },
            ],
            "relation": {
              "alias": {
                "aliasname": "t",
              },
              "inh": true,
              "location": 11,
              "relname": "itest15",
              "relpersistence": "p",
            },
            "sourceRelation": {
              "RangeSubselect": {
                "alias": {
                  "aliasname": "s",
                },
                "subquery": {
                  "SelectStmt": {
                    "limitOption": "LIMIT_OPTION_DEFAULT",
                    "op": "SETOP_NONE",
                    "targetList": [
                      {
                        "ResTarget": {
                          "location": 35,
                          "name": "s_a",
                          "val": {
                            "A_Const": {
                              "ival": {
                                "ival": 20,
                              },
                              "location": 35,
                            },
                          },
                        },
                      },
                      {
                        "ResTarget": {
                          "location": 46,
                          "name": "s_b",
                          "val": {
                            "A_Const": {
                              "location": 46,
                              "sval": {
                                "sval": "inserted by merge",
                              },
                            },
                          },
                        },
                      },
                    ],
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 186 1`] = `
[
  "MERGE INTO itest15 t
USING (SELECT 30 AS s_a, 'inserted by merge' AS s_b) s
ON t.a = s.s_a
WHEN NOT MATCHED THEN
	INSERT (a, b) OVERRIDING SYSTEM VALUE VALUES (s.s_a, s.s_b)",
  {
    "stmts": [
      {
        "stmt": {
          "MergeStmt": {
            "joinCondition": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "t",
                        },
                      },
                      {
                        "String": {
                          "sval": "a",
                        },
                      },
                    ],
                    "location": 79,
                  },
                },
                "location": 83,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "s",
                        },
                      },
                      {
                        "String": {
                          "sval": "s_a",
                        },
                      },
                    ],
                    "location": 85,
                  },
                },
              },
            },
            "mergeWhenClauses": [
              {
                "MergeWhenClause": {
                  "commandType": "CMD_INSERT",
                  "override": "OVERRIDING_SYSTEM_VALUE",
                  "targetList": [
                    {
                      "ResTarget": {
                        "location": 122,
                        "name": "a",
                      },
                    },
                    {
                      "ResTarget": {
                        "location": 125,
                        "name": "b",
                      },
                    },
                  ],
                  "values": [
                    {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "s",
                            },
                          },
                          {
                            "String": {
                              "sval": "s_a",
                            },
                          },
                        ],
                        "location": 160,
                      },
                    },
                    {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "s",
                            },
                          },
                          {
                            "String": {
                              "sval": "s_b",
                            },
                          },
                        ],
                        "location": 167,
                      },
                    },
                  ],
                },
              },
            ],
            "relation": {
              "alias": {
                "aliasname": "t",
              },
              "inh": true,
              "location": 11,
              "relname": "itest15",
              "relpersistence": "p",
            },
            "sourceRelation": {
              "RangeSubselect": {
                "alias": {
                  "aliasname": "s",
                },
                "subquery": {
                  "SelectStmt": {
                    "limitOption": "LIMIT_OPTION_DEFAULT",
                    "op": "SETOP_NONE",
                    "targetList": [
                      {
                        "ResTarget": {
                          "location": 35,
                          "name": "s_a",
                          "val": {
                            "A_Const": {
                              "ival": {
                                "ival": 30,
                              },
                              "location": 35,
                            },
                          },
                        },
                      },
                      {
                        "ResTarget": {
                          "location": 46,
                          "name": "s_b",
                          "val": {
                            "A_Const": {
                              "location": 46,
                              "sval": {
                                "sval": "inserted by merge",
                              },
                            },
                          },
                        },
                      },
                    ],
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`identity.sql > line 210 1`] = `
[
  "SELECT * FROM itest15",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "itest15",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
